--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "npm-run-all --parallel devOld check:watch",
-		"devOld": "vite dev",
+		"dev": "npm-run-all --parallel devnots check:watch",
+		"devnots": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
