--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,12 @@
 		"sourceMap": true,
 		"strict": true,
 		"importsNotUsedAsValues": "remove"
-	}
+	},
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
 	// from the referenced tsconfig.json - TypeScript does not merge them in
+	"ts-node": {
+		"esm": true
+	}
 }
