--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/jsonwebtoken": "^9.0.2",
 		"nodemon": "^2.0.22",
 		"npm-run-all": "^4.1.5",
 		"svelte": "^3.54.0",
@@ -28,6 +29,7 @@
 	"dependencies": {
 		"discord.js": "^14.11.0",
 		"dotenv": "^16.1.4",
+		"jsonwebtoken": "^9.0.0",
 		"minecraft-items": "^0.4.3",
 		"mongodb": "^5.6.0",
 		"prismarine-nbt": "^2.2.1"
