--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ mongoConnectionString=
 hypixelApiKey=
 discordBotToken=
 runDiscordBot= # "true" runs discord bot, anything else does not. running with `npm run dev` seems to spawn new discord clients on every hot reload so just don't run the discord bot locally or run it separately with `npm run discordonly`
+discordClientId=
+discordClientSecret=
+hostDomain=http://localhost:5173
+jwtSecret=
