log all requests to discord

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ discordClientId=
 discordClientSecret=
 hostDomain=http://localhost:5173
 jwtSecret=
+discordRequestsLogWebhookUrl=
+node_env=development
