--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"importsNotUsedAsValues": "remove"
+		"importsNotUsedAsValues": "remove",
+		"allowImportingTsExtensions": true
 	},
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
