add receive discord trading message api route

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ hostDomain=http://localhost:5173
 jwtSecret=
 discordRequestsLogWebhookUrl=
 node_env=development
+discordTradeMessageKeys= # comma-separated keys
